# simple-switch-cmake

./: .gitignore  CMakeLists.txt  README.md
source/: header.hpp  main.cpp
